Fixes border overlap

--- a/client/main.scss
+++ b/client/main.scss
@@ -7,7 +7,7 @@ main {
 }
 
 .border {
-	border: black 2px solid;
+	border: black 1px solid;
 }
 
 .pointer {
@@ -85,6 +85,7 @@ main {
 .box {
 	width: 25%;
 	font-size: 36px;
+	margin: 1px;
 }
 
 .box:hover {
